--- a/crates/block3d_algorithm/Cargo.toml
+++ b/crates/block3d_algorithm/Cargo.toml
@@ -11,6 +11,7 @@ tracing = { workspace = true }
 tracing-test = { workspace = true }
 rand = { workspace = true }
 thiserror = { workspace = true }
+uom = { workspace = true }
 
 petgraph = "0.6.5"
 fixedbitset = "0.4"
